--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,11 @@ requires = ["poetry>=0.12"]
 
 [tool]
 [tool.poetry]
-authors = ["Your Name <you@example.com>"]
+authors = ["Atsintli <atsintli@riseup.net>"]
 description = ""
 name = "markovid-19"
 version = "0.1.0"
 [tool.poetry.dependencies]
 gtts = "^2.1"
-playsound = "^1.2"
 python = "^3.7"
 [tool.poetry.dev-dependencies]
